Bug 466721 - Touchscreen does not work when using kwin_wayland as compositorcommand on SDDM
Summary: Touchscreen does not work when using kwin_wayland as compositorcommand on SDDM
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: libinput (other bugs)
Version First Reported In: 5.27.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2023-03-02 14:24 UTC by Marc Deop
Modified: 2023-03-11 04:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Deop 2023-03-02 14:24:14 UTC
STEPS TO REPRODUCE
1. Boot the computer into SDDM on Wayland
2. Try the touchscreen... nothing happens

OBSERVED RESULT
Touching the screen doesn't seem to have any effect

EXPECTED RESULT
The touchscreen works

SOFTWARE/OS VERSIONS

Linux: 6.1.12-200.fc37.x86_64
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION:

After enabling WAYLAND_DEBUG=1 I could see this on the logs:

Mar 01 22:46:40 marc-xps15 sddm-helper-start-wayland[13601]: "kwin_libinput: Touch down received for device with no output assigned


The CompositorCommand on SDDM is set to:
kwin_wayland --no-global-shortcuts --no-lockscreen --inputmethod maliit-keyboard --locale1
Comment 1 Marc Deop 2023-03-03 15:54:49 UTC
Something I found out and it might be relevant:

After switching to a different TTY and getting back to SDDM... now the touch events work. Curious.
Comment 2 Bug Janitor Service 2023-03-07 02:46:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3762
Comment 3 Aleix Pol 2023-03-07 12:10:41 UTC
Git commit 4bc8cd6c5427665af89f232dce43f0375db3bb0b by Aleix Pol i Gonzalez, on behalf of Aleix Pol.
Committed on 07/03/2023 at 11:53.
Pushed by vladz into branch 'master'.

input: Make sure input backends are initialised when the workspace is set up

The outputs already present upon workspace setup wouldn't signal. This
was easily triggered running a standalone kwin session on a tty, it
would manifest with the touchscreen not working complaining that it
didn't have an output assigned yet.

M  +1    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/4bc8cd6c5427665af89f232dce43f0375db3bb0b
Comment 4 Vlad Zahorodnii 2023-03-07 12:29:14 UTC
Git commit d32dc2ea2456f4d97cbd38381b4272876a7e4657 by Vlad Zahorodnii, on behalf of Aleix Pol.
Committed on 07/03/2023 at 12:14.
Pushed by apol into branch 'Plasma/5.27'.

input: Make sure input backends are initialised when the workspace is set up

The outputs already present upon workspace setup wouldn't signal. This
was easily triggered running a standalone kwin session on a tty, it
would manifest with the touchscreen not working complaining that it
didn't have an output assigned yet.


(cherry picked from commit 4bc8cd6c5427665af89f232dce43f0375db3bb0b)

M  +1    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/d32dc2ea2456f4d97cbd38381b4272876a7e4657
Comment 5 farline99 2023-03-07 12:31:31 UTC
Wow, only a couple of days ago I encountered this bug, and then the bug report is ready, and the commit was made 10 hours ago. Fantastic!
Comment 6 Marc Deop 2023-03-07 14:01:00 UTC
I confirm it's fixed for me.

Fix available on our copr repository: https://copr.fedorainfracloud.org/coprs/g/kdesig/kde/

I will bring it to the normal repositories with Plasma 5.27.3 next week